# PortKill

./: .gitignore  README.md  README.zh.md
.github/workflows/: release.yml
scripts/: build-portable.ps1  generate-icon.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  style.css
