[package]
name = "portKill"
version = "0.1.0"
description = "Windows 11 portable port viewer and process terminator"
authors = ["portKill"]
edition = "2021"
default-run = "portKill"

[lib]
name = "portkill_core"
path = "src/lib.rs"

[[bin]]
name = "portKill"
path = "src/main.rs"

[[bin]]
name = "portKill-cli"
path = "src/bin/portKill-cli.rs"

[build-dependencies]
tauri-build = "2.6.2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading"
] }

